Fixed: TypeScript typing issue. #Error: using a local package without TypeScript type declarations

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "My first npm test package",
   "main": "index.js",
+  "types": "index.d.ts",
   "scripts": {
     "test": "echo \"No tests yet\""
   },
